--- a/ToDo_list/css/main.css
+++ b/ToDo_list/css/main.css
@@ -11,6 +11,13 @@
   font-family: Abold;
   src: url(../fonts/Acrom-Bold.ttf);
 }
+@font-face {
+  font-family: 'Lobster';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Lobster Regular'), local('Lobster-Regular'), url(https://fonts.gstatic.com/s/lobster/v22/neILzCirqoswsqX9zoKmNg.ttf) format('truetype');
+}
 section.main-app {
   background-color: #e0dcd7;
   padding: 5px 5px;
@@ -55,6 +62,7 @@ section.main-app .container .main .task-self {
   flex-direction: row;
   margin-top: 5px;
   justify-content: space-between;
+  align-items: center;
   border: 1px solid white;
   border-radius: 5px;
 }
@@ -67,6 +75,8 @@ section.main-app .container .main .task-self .task {
   padding: 5px;
   width: calc(100% - 60px - 150px);
   text-align: left;
+  font-family: 'Lobster', cursive;
+  font-size: 20px;
 }
 section.main-app .container .main .task-self .option {
   padding: 5px;
@@ -76,7 +86,61 @@ section.main-app .container .main .task-self .option {
   flex-direction: row;
   justify-content: space-around;
 }
+section.main-app .container .main .task-self .option .delete-button {
+  width: 45px;
+  height: 45px;
+  font-size: 30px;
+  color: black;
+  border-radius: 50%;
+  border: 1px solid white;
+  background-color: transparent;
+}
+section.main-app .container .main .task-self .option .edit-button {
+  width: 45px;
+  height: 45px;
+  font-size: 30px;
+  color: black;
+  border-radius: 50%;
+  border: 1px solid white;
+  background-color: transparent;
+}
+section.main-app .container .main .task-self .option .flag-button {
+  background-color: red;
+  width: 45px;
+  height: 45px;
+  font-size: 30px;
+  color: black;
+  border-radius: 50%;
+  border: 1px solid white;
+}
+section.main-app .container .global-info {
+  max-width: 250px;
+  background-color: #af7737;
+  padding: 15px 15px;
+  margin: 15px auto 0px auto;
+  border-radius: 10px;
+}
+section.main-app .container .global-info .flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 section.main-app .addButton {
   display: flex;
   justify-content: center;
+  text-align: center;
+  width: 50px;
+  height: 50px;
+  background-color: #4b44b1;
+  border-radius: 50%;
+  border: 1px solid white;
+  margin: 10px auto;
+}
+section.main-app .addButton #addNewTaskButton {
+  text-align: center;
+  border: none;
+  color: inherit;
+  background-color: transparent;
+  font-size: 30px;
+  color: #0c910c;
 }
